<resources>
    <string name="app_name">FTC</string>
    <string name="activity_detail_lblname_text">Company Name</string>
    <string name="acitivity_detail_cif">CIF</string>
    <string name="activity_detail_address">Address</string>
    <string name="activity_detail_phone">Phone</string>
    <string name="activity_detail_email">Email</string>
    <string name="activity_detail_url_logo">URL logo</string>
    <string name="activity_detail_contact_person">Contact person</string>
    <string name="ItemFragment_snackbar_update">Compnay updated</string>
    <string name="ItemFragment_snackbar_add">New Company added</string>
    <string name="fragment_item_list_emptyView">Insert a company</string>
    <string name="fragment_item_remove">"Company %1$s removed"</string>
    <string name="undo">Undo</string>
    <string name="activity_detail_txtPerson">Person</string>
    <string name="activity_detail_txtLogo">Logo</string>
    <string name="activity_detail_txtEmail">Email</string>
    <string name="activity_detail_txtPhone">Phone</string>
    <string name="activity_detail_txtAddress">Address</string>
    <string name="activity_detail_txtCif">CIF</string>
    <string name="activity_detail_txtName">Name</string>
    <string name="DetailActivity_error_inserting">Error inserting the company, CIF already exist</string>
    <string name="DetailActivity_error_updating">Error updating the company check all values</string>
    <string name="DetailStudent_error_inserting">Error inserting the Student</string>
    <string name="DetailStudent_error_updating">Error updating the Student check all values</string>
    <string name="Company_errorcif">Incorrect CIF</string>
    <string name="company_errorName">Cant be empty</string>
    <string name="company_error_phone">Incorrect Phone</string>
    <string name="company_error_email">Incorrect Email</string>
    <string name="company_error_logo">Incorrect Logo</string>
    <string name="activity_main_mnuPreferences">preferences</string>
    <string name="prefDefaultFrag">Default screen</string>
    <string name="mnuStudents">Students</string>
    <string name="mnuCompanies">Companies</string>
    <string name="mnuVisits">Visits</string>
    <string name="mnuNextVisits">Next visits</string>
    <string name="prefDays">Days of visits</string>
    <string name="activity_main_mnuAboutIt">About it</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_students_list_emptyView">Insert a student</string>
    <string name="FragmentStudent_snackbar_update">Student updated</string>
    <string name="FragmentVisit_snackbar_update">Visit updated</string>
    <string name="FragmentStudent_snackbar_add">New Student added</string>
    <string name="FragmentVisit_snackbar_add">New Visit added</string>
    <string name="FragmentStudent_removed">"Student %1$s removed"</string>
    <string name="FragmentVisit_removed">"Visit of %1$s removed"</string>
    <string name="fragment_visits_list_emptyView">Insert a visit</string>
    <string name="fragment_student_list_item_lblphone">Phone:</string>
    <string name="company_fragment_undo_error">Company is being used</string>
    <string name="student_fragment_undo_error">Student is being used</string>
    <string name="visit_fragment_undo_error">Visit is being used</string>
    <string name="activity_detail_student_last_name">Last Name</string>
    <string name="activity_detail_student_txttutor">Tutor</string>
    <string name="activity_detail_student_txttutorphone">Tutor phone</string>
    <string name="select_start_time">Select start Time...</string>
    <string name="select_end_time">Select end Time...</string>
    <string name="activity_detail_student_txtwork_schedule">Work Schedule</string>
    <string name="separator">-</string>
    <string name="activity_detail_student_lbl_company">Company</string>
    <string name="DetailVisit_error_inserting">Error inserting a visit,check values</string>
    <string name="DetailVisit_error_updating">Error updating the visit, check values</string>
    <string name="Select_time_picker">Select Time</string>
    <string name="Select_date_picker">Select Date</string>
    <string name="select_day_picker">Select Day...</string>
    <string name="activity_detail_visit_student">Student</string>
    <string name="activity_detail_visit_start_hour">Start hour</string>
    <string name="activity_detail_visit_end_end">End hour</string>
    <string name="activity_detail_visit_day">Day</string>
    <string name="activity_detail_visit_observations">Observations</string>
    <string name="fragment_nextvisitss_list_item_next_visit">Next Visit:</string>
    <string name="nextVisitsfragment_first_visit">Make first vist</string>
    <string name="preferences_Default_screen">Number of days between each visit</string>
    <string name="activity_about_lblabout">Made by Alejandro correro @2018</string>
    <string name="activity_preferences_label">Preferences</string>
    <string name="activity_student_label">Student</string>
    <string name="activity_visit">Visit</string>
    <string name="activity_company_label">Company</string>

</resources>
