<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mnuNextVisits"
        android:enabled="true"
        android:icon="@drawable/ic_next_week_black_24dp"
        android:title="@string/mnuNextVisits"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mnuVisits"
        android:enabled="true"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/mnuVisits"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mnuHelp"
        android:enabled="false"
        android:visible="false"
        android:title=""
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mnuStudents"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/mnuStudents"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mnuCompanies"
        android:enabled="true"
        android:icon="@drawable/ic_business_center_black_24dp"
        android:title="@string/mnuCompanies"
        app:showAsAction="ifRoom" />
</menu>