<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.alejandrocorrero.room.data.model.Student" />

        <variable
            name="presenter"
            type="com.alejandrocorrero.room.ui.student.detail.DetailStudentActivity" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill_vertical"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:fillViewport="true">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    app:errorEnabled="@{model.nameError}"
                    app:errorText="@{model.errorName}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivName"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/activity_detail_txtName"
                        android:text="@={model.name}" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/ivName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toTopOf="@+id/tilLastName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tilName"
                    app:srcCompat="@drawable/ic_person_pin_black_24dp"
                    tools:ignore="ContentDescription" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilLastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivName"
                    app:layout_constraintTop_toBottomOf="@+id/tilName">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/activity_detail_student_last_name"
                        android:text="@={model.lastName}" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    app:errorEnabled="@{model.phoneError}"
                    app:errorText="@{model.errorPhone}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivName"
                    app:layout_constraintTop_toBottomOf="@+id/tilLastName">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/activity_detail_txtPhone"
                        android:inputType="phone"
                        android:text="@={model.phone}" />
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/ivPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    app:layout_constraintBottom_toTopOf="@+id/tilEmail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tilPhone"
                    app:srcCompat="@drawable/ic_phone_black_24dp"
                    tools:ignore="ContentDescription" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    app:errorEnabled="@{model.emailError}"
                    app:errorText="@{model.errorEmail}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivName"
                    app:layout_constraintTop_toBottomOf="@+id/tilPhone">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/activity_detail_txtEmail"
                        android:inputType="textEmailAddress"
                        android:text="@={model.email}" />
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/ivEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    app:layout_constraintBottom_toTopOf="@+id/spnCompany"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tilEmail"
                    app:srcCompat="@drawable/ic_email_black_24dp"
                    tools:ignore="ContentDescription" />

                <Spinner
                    android:id="@+id/spnCompany"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginStart="8dp"

                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivName"
                    app:layout_constraintTop_toBottomOf="@+id/lblCompany">

                </Spinner>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilTutor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivName"
                    app:layout_constraintTop_toBottomOf="@+id/spnCompany">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtTutor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/activity_detail_student_txttutor"
                        android:inputType="textPersonName"
                        android:text="@={model.nameTutor}" />
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/ivTutor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    app:layout_constraintBottom_toBottomOf="@+id/tilTutor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tilTutor"
                    app:srcCompat="@drawable/ic_person_black_24dp"
                    tools:ignore="ContentDescription" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilPhoneTutor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    app:errorEnabled="@{model.phoneTutorError}"
                    app:errorText="@{model.errorPhoneTutor}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivName"
                    app:layout_constraintTop_toBottomOf="@+id/tilTutor">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtPhoneTutor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/activity_detail_student_txttutorphone"
                        android:inputType="phone"
                        android:text="@={model.phoneTutor}" />
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/ivPhoneTutor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    app:layout_constraintBottom_toBottomOf="@+id/tilPhoneTutor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tilPhoneTutor"
                    app:srcCompat="@drawable/ic_smartphone_black_24dp"
                    tools:ignore="ContentDescription" />


                <TextView
                    android:id="@+id/lblStartSchedule"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:ems="10"
                    android:hint="@string/select_start_time"
                    android:padding="5dp"
                    android:text="@={model.startHour}"
                    android:textAlignment="center"
                    android:textColor="#090"
                    android:textColorHint="#090"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/textView3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/ivPhoneTutor"
                    app:layout_constraintTop_toBottomOf="@+id/lblWorkSchedule" />


                <TextView
                    android:id="@+id/lblEndSchedule"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:ems="10"
                    android:hint="@string/select_end_time"
                    android:padding="@dimen/endschedule_padding"
                    android:text="@={model.endHour}"
                    android:textAlignment="center"
                    android:textColor="#090"
                    android:textColorHint="#090"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/lblWorkSchedule" />

                <TextView
                    android:id="@+id/lblWorkSchedule"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/activity_detail_student_txtwork_schedule"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivPhoneTutor"
                    app:layout_constraintTop_toBottomOf="@+id/tilPhoneTutor" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/separator"
                    android:textAlignment="center"
                    android:textColor="#090"
                    android:textColorHint="#090"
                    android:textSize="@dimen/activity_detail_student_separatorSize"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/lblEndSchedule"
                    app:layout_constraintEnd_toStartOf="@+id/lblEndSchedule"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/lblStartSchedule"
                    app:layout_constraintTop_toBottomOf="@+id/lblWorkSchedule"
                    app:layout_constraintVertical_bias="0.535" />

                <TextView
                    android:id="@+id/lblCompany"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/activity_detail_student_lbl_company"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivPhone"
                    app:layout_constraintTop_toBottomOf="@+id/tilEmail" />


            </android.support.constraint.ConstraintLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:onClick="@{presenter::fabOnClick}"
            android:src="@drawable/ic_save_white_24dp"
            android:visibility="@{model.enable}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.design.widget.CoordinatorLayout>

</layout>